--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,4 +102,7 @@ dependencies {
 
     //pager
     implementation "com.google.accompanist:accompanist-pager:0.28.0"
+
+    // lottie
+    implementation "com.airbnb.android:lottie-compose:6.4.0"
 }
